--- a/Project_1.ipynb
+++ b/Project_1.ipynb
@@ -3105,17 +3105,17 @@
     "```\n",
     "* Weekend pass for set fee (to be decided) for unlimited rides between 10am and 4pm\n",
     "\n",
-    "* Midday Ride Voucher for free unlock, 30 minutes between 10 am and 3 pm during the week\n",
+    "* Midday Ride Voucher for free unlock, 30 minute ride between 10 am and 3 pm during the week\n",
     "\n",
     "* Close SF stations Post at Kearney and Washington at Kearney or run promotion/initiative to increase awareness and ridership\n",
     "\n",
-    "* Minimize service in Redwood City or change model to allow subscribers to keep bikes overnight for a lesser fee and serve with stations at Caltrain\n",
+    "* Minimize/Stop service in Redwood City or change model to allow subscribers to keep bikes overnight for a lesser fee and serve with stations at Caltrain\n",
     "\n",
     "* Limit future developments in Palo Alto unless situation changes (spikes in ridership, partner with Stanford, etc)\n",
     "\n",
-    "* Half-off \"Out-on-the-Town\" promotion 7pm - midnight every day of the week to boost ridership.\n",
+    "* Half-off \"Out-on-the-Town\" promotion 7pm - midnight every day of the week to boost ridership during slow hours.\n",
     "\n",
-    "* \"Pre-work Workout Package\" or \"Early Morning Cycling Package\" at 4 am - 6am to encourage use during those hours; regular customers if done well.\n",
+    "* \"Pre-work Workout Package\" or \"Early Morning Cycling Package\" at 4 am - 6am to encourage use during those hours; will gain regular customers if done well.\n",
     "```"
    ]
   },
