--- a/Project_1.ipynb
+++ b/Project_1.ipynb
@@ -3113,9 +3113,9 @@
     "\n",
     "* Limit future developments in Palo Alto unless situation changes (spikes in ridership, partner with Stanford, etc)\n",
     "\n",
-    "* Half-off \"Out-on-the-Town\" promotion 7pm - midnight every day of the week to boost ridership during slow hours.\n",
+    "* Half-off \"Out-on-the-Town\" promotion 7pm - midnight every day of the week to boost ridership during slow hours\n",
     "\n",
-    "* \"Pre-work Workout Package\" or \"Early Morning Cycling Package\" at 4 am - 6am to encourage use during those hours; will gain regular customers if done well.\n",
+    "* \"Pre-work Workout Package\" or \"Early Morning Cycling Package\" at 4 am - 6am to encourage use during those hours\n",
     "```"
    ]
   },
